Fixed alignment issues on the feed and homepage

--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -13,3 +13,9 @@
     width: 100%;
   }
 }
+
+.homepage-wrapper {
+  .card {
+    padding-top: 42px;
+  }
+}
